--- a/src/main.html
+++ b/src/main.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport"
@@ -15,34 +16,37 @@
       <nav class="header-menu">
           <div class="header-menu__inner">
               <div class="header-menu__left">
-                  <button class="header__burger button" title="Open menu">
+                    <button type="button" class="header__burger burger-button button" title="Open menu"
+                        onclick="mobileOverlay.showModal()">
                       <span class="visually-hidden">Open menu</span>
                       <div class="button-figure">
                           <img class="button__image" src="assets/blocks/header/icons/burger.svg" alt="">
                       </div>
                   </button>
-                  <a href="#" class="header__logo logo"><img src="assets/blocks/header/icons/logo.svg" alt="CPS Logo" width="96"
-                          height="50" /></a>
+                    <a href="#" class="header__logo logo"><img src="assets/blocks/header/icons/logo.svg" alt="CPS Logo"
+                            width="96" height="50" /></a>
               </div>
               <div class="header-menu-buttons">
                   <div class="header-menu__tablet-view">
-                      <button class="header__button button">
-                          <div class="button-figure"><img class="button__image" src="assets/blocks/header/icons/call.svg" alt="">
+                        <button type="button" class="header__button button">
+                            <div class="button-figure"><img class="button__image"
+                                    src="assets/blocks/header/icons/call.svg" alt="">
                           </div>
                       </button>
-                      <button class="header__button button">
-                          <div class="button-figure"><img class="button__image" src="assets/blocks/header/icons/chat.svg" alt="">
+                        <button type="button" class="header__button button">
+                            <div class="button-figure"><img class="button__image"
+                                    src="assets/blocks/header/icons/chat.svg" alt="">
                           </div>
                       </button>
-                      <button class="header__button button">
-                          <div class="button-figure"><img class="button__image" src="assets/blocks/header/icons/profile.svg"
-                                  alt=""></div>
+                        <button type="button" class="header__button button">
+                            <div class="button-figure"><img class="button__image"
+                                    src="assets/blocks/header/icons/profile.svg" alt=""></div>
                       </button>
                   </div>
                   <div class="header-menu__right">
                       <div class="button-container">
                           <span class="button__text">Оставить заявку</span>
-                          <button class="header__button button">
+                            <button type="button" class="header__button button">
                               <div class="button-figure">
                                   <img class="button__image" src="assets/blocks/header/icons/repair.svg" alt="">
                               </div>
@@ -50,7 +54,7 @@
                       </div>
                       <div class="button-container">
                           <span class="button__text">Статус ремонта</span>
-                          <button class="header__button button">
+                            <button type="button" class="header__button button">
                               <div class="button-figure">
                                   <img class="button__image" src="assets/blocks/header/icons/checkstatus.svg" alt="">
                               </div>
@@ -97,5 +101,81 @@
         </div>
     </div>
 </main>
+
+    <dialog class="mobile-overlay" id="mobileOverlay">
+        <form class="mobile-overlay__close-button-wrapper">
+            <!-- <button class="mobile-overlay__close-button cross-button"
+            type="submit"> -->
+            <span class="visually-hidden">Close navigation menu</span></button>
+            <div class="mobile-overlay__body"></div>
+            <div class="menu-overlay-container">
+                <div class="menu-upper-part">
+                    <div class="menu-header">
+                        <div class="logo-burger-side">
+                            <button class="mobile-overlay__close-button menu-header__button button">
+                                <div class="button-figure"><img class="button__image"
+                                        src="assets/blocks/header/icons/cancel.svg" alt="">
+                                </div>
+                            </button>
+                            <a href="#" class="header__logo logo"><img src="assets/blocks/header/icons/logo.svg"
+                                    alt="CPS Logo" width="97" height="51" /></a>
+                        </div>
+                        <button class="menu-header__button button">
+                            <div class="button-figure"><img class="button__image"
+                                    src="assets/blocks/header/icons/search.svg" alt="">
+                            </div>
+                        </button>
+                    </div>
+                    <div class="menu-list">
+                        <ul class="links-overlay-list">
+                            <li class="links-overlay-list__item"><a href="#"
+                                    class="links-overlay-list__link links-overlay-list__link--is-active">Ремонт
+                                    техники</a></li>
+                            <li class="links-overlay-list__item"><a href="#" class="links-overlay-list__link">Услуги и сервисы</a></li>
+                            <li class="links-overlay-list__item"><a href="#" class="links-overlay-list__link">Корпоративным клиентам</a>
+                            </li>
+                            <li class="links-overlay-list__item"><a href="#" class="links-overlay-list__link">Продавцам техники</a></li>
+                            <li class="links-overlay-list__item"><a href="#" class="links-overlay-list__link">Партнерам</a></li>
+                            <li class="links-overlay-list__item"><a href="#" class="links-overlay-list__link">Производителям</a></li>
+                            <li class="links-overlay-list__item"><a href="#" class="links-overlay-list__link">Наши сервисные центры</a>
+                            </li>
+                            <li class="links-overlay-list__item"><a href="#" class="links-overlay-list__link">Контакты</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="menu-overlay-footer">
+                    <div class="menu-overlay-footer-buttons">
+                        <button class="menu-header__button button">
+                            <div class="button-figure"><img class="button__image"
+                                    src="assets/blocks/header/icons/call.svg" alt="">
+                            </div>
+                        </button>
+                        <button class="menu-header__button button">
+                            <div class="button-figure"><img class="button__image"
+                                    src="assets/blocks/header/icons/chat.svg" alt="">
+                            </div>
+                        </button>
+                        <button class="menu-header__button button">
+                            <div class="button-figure"><img class="button__image"
+                                    src="assets/blocks/header/icons/profile.svg" alt=""></div>
+                        </button>
+                    </div>
+                    <div class="menu-overlay-footer-contacts">
+                        <p class="menu-overlay-container__email">mail@cps.com</p>
+                        <p class="menu-overlay-container__phone">8 800 890 8900</p>
+                    </div>
+                    <div class="menu-overlay-footer-languages">
+                        <ul class="languages-list">
+                            <li class="languages-list__item languages-list__item--is-active"><a href=""
+                                    class="languages-list__link languages-list__link--is-active">RU</a></li>
+                            <li class="languages-list__item"><a href="" class="languages-list__link">EN</a></li>
+                            <li class="languages-list__item"><a href="" class="languages-list__link">CH</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </dialog>
   </body>
+
 </html>
