--- a/src/main.html
+++ b/src/main.html
@@ -1,181 +1,185 @@
 <!doctype html>
 <html lang="en">
 
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport"
         content="width=device-width, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0, initial-scale=1.0" />
-    <meta name="theme-color" content="#B8FFEC">
+    <meta name="theme-color" content="#B8FFEC" />
     <title>CPS</title>
+</head>
 
-  </head>
-
-  <body class="page">
+<body class="page">
     <header class="header">
-      <h1 class="visually-hidden">CPS Сервис-центр</h1>
-      <nav class="header-menu">
-          <div class="header-menu__inner">
-              <div class="header-menu__left">
-                    <button type="button" class="header__burger burger-button button" title="Open menu"
+        <h1 class="visually-hidden">CPS Сервис-центр</h1>
+        <nav class="header-menu">
+            <div class="header-menu__inner">
+                <div class="header-menu__left">
+                    <button type="button" class="header__burger burger-button header__button button" title="Open menu"
                         onclick="mobileOverlay.showModal()">
-                      <span class="visually-hidden">Open menu</span>
-                      <div class="button-figure">
-                          <img class="button__image" src="assets/blocks/header/icons/burger.svg" alt="">
-                      </div>
-                  </button>
+                        <span class="visually-hidden">Open menu</span>
+                        <div class="button-figure">
+                            <img class="button__image" src="assets/blocks/header/icons/burger.svg" alt="" />
+                        </div>
+                    </button>
                     <a href="#" class="header__logo logo"><img src="assets/blocks/header/icons/logo.svg" alt="CPS Logo"
                             width="96" height="50" /></a>
-              </div>
-              <div class="header-menu-buttons">
-                  <div class="header-menu__tablet-view">
+                </div>
+                <div class="header-menu-buttons">
+                    <div class="header-menu__tablet-view">
                         <button type="button" class="header__button button">
                             <div class="button-figure"><img class="button__image"
-                                    src="assets/blocks/header/icons/call.svg" alt="">
-                          </div>
-                      </button>
+                                    src="assets/blocks/header/icons/call.svg" alt="" />
+                            </div>
+                        </button>
                         <button type="button" class="header__button button">
                             <div class="button-figure"><img class="button__image"
-                                    src="assets/blocks/header/icons/chat.svg" alt="">
-                          </div>
-                      </button>
+                                    src="assets/blocks/header/icons/chat.svg" alt="" />
+                            </div>
+                        </button>
                         <button type="button" class="header__button button">
                             <div class="button-figure"><img class="button__image"
-                                    src="assets/blocks/header/icons/profile.svg" alt=""></div>
-                      </button>
-                  </div>
-                  <div class="header-menu__right">
-                      <div class="button-container">
-                          <span class="button__text">Оставить заявку</span>
+                                    src="assets/blocks/header/icons/profile.svg" alt="" /></div>
+                        </button>
+                    </div>
+                    <div class="header-menu__right">
+                        <div class="button-container">
+                            <span class="button__text">Оставить заявку</span>
                             <button type="button" class="header__button button">
-                              <div class="button-figure">
-                                  <img class="button__image" src="assets/blocks/header/icons/repair.svg" alt="">
-                              </div>
-                          </button>
-                      </div>
-                      <div class="button-container">
-                          <span class="button__text">Статус ремонта</span>
+                                <div class="button-figure">
+                                    <img class="button__image" src="assets/blocks/header/icons/repair.svg" alt="" />
+                                </div>
+                            </button>
+                        </div>
+                        <div class="button-container">
+                            <span class="button__text">Статус ремонта</span>
                             <button type="button" class="header__button button">
-                              <div class="button-figure">
-                                  <img class="button__image" src="assets/blocks/header/icons/checkstatus.svg" alt="">
-                              </div>
-                          </button>
-                      </div>
-                      <div class="button-figure"></div>
-                  </div>
-              </div>
-          </div>
-      </nav>
-  </header>
-  <main class="main">
-    <h2 class="main__heading">Услуги и сервисы</h2>
-    <ul class="links-list">
-        <li class="links-list__item links-list__item--is-active"><a
-                class="links-list__link links-list__link--is-active" href="#">Ремонтируемые
-                устройства</a></li>
-        <li class="links-list__item"><a class="links-list__link" href="#">Дополнительные услуги</a></li>
-        <li class="links-list__item"><a class="links-list__link" href="#">Цены на услуги</a></li>
-        <li class="links-list__item"><a class="links-list__link" href="#">Адреса сервисных центров</a></li>
-        <li class="links-list__item"><a class="links-list__link" href="#">Специальные цены</a></li>
-        <li class="links-list__item"><a class="links-list__link" href="#">Отзывы</a></li>
-
-
-    </ul>
-    <div class="article-container">
-        <div class="article-text-part">
-            <article class="article">
-                <p class="article__text">Мы являемся авторизованным сервисным центром по ремонту техники Dell.
-                    Только у нас вы можете
-                    отремонтировать
-                    свой ноутбук Dell с официальной гарантией производителя.</p>
-                <p class="article__text">
-                    <br>
-                    Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера<span
-                        class="article__last-text">, что подтверждает большое количество постоянных клиентов. Мы
-                        гордимся тем, что к нам
-                        обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</span>
-                </p>
-            </article>
-            <a class="continue-link" href="#"><img src="assets/blocks/article/icons/continue.svg" alt="">Читать далее</a>
+                                <div class="button-figure">
+                                    <img class="button__image" src="assets/blocks/header/icons/checkstatus.svg"
+                                        alt="" />
+                                </div>
+                            </button>
+                        </div>
+                        <div class="button-figure"></div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main class="main">
+        <h2 class="main__heading">Услуги и сервисы</h2>
+        <ul class="links-list">
+            <li class="links-list__item links-list__item--is-active"><a
+                    class="links-list__link links-list__link--is-active" href="#">Ремонтируемые устройства</a></li>
+            <li class="links-list__item"><a class="links-list__link" href="#">Дополнительные услуги</a></li>
+            <li class="links-list__item"><a class="links-list__link" href="#">Цены на услуги</a></li>
+            <li class="links-list__item"><a class="links-list__link" href="#">Адреса сервисных центров</a></li>
+            <li class="links-list__item"><a class="links-list__link" href="#">Специальные цены</a></li>
+            <li class="links-list__item"><a class="links-list__link" href="#">Отзывы</a></li>
+        </ul>
+        <div class="article-container">
+            <div class="article-text-part">
+                <article class="article">
+                    <p class="article__text">Мы являемся авторизованным сервисным центром по ремонту техники
+                        Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с
+                        официальной гарантией производителя.</p>
+                    <p class="article__text">
+                        <br />
+                        Мы успешно работаем с 1992 года и заслужили репутацию надежного
+                        партнера<span class="article__last-text">, что подтверждает большое количество постоянных
+                            клиентов. Мы
+                            гордимся тем, что к нам обращаются по рекомендациям и, в свою
+                            очередь, советуют нас родным и близким.</span>
+                    </p>
+                </article>
+                <a class="continue-link" href="#"><img src="assets/blocks/article/icons/continue.svg" alt="" />Читать
+                    далее</a>
+            </div>
+            <div class="image-box"> </div>
         </div>
-        <div class="image-box">
-        </div>
-    </div>
-</main>
+    </main>
 
     <dialog class="mobile-overlay" id="mobileOverlay">
         <form class="mobile-overlay__close-button-wrapper">
-            <!-- <button class="mobile-overlay__close-button cross-button"
-            type="submit"> -->
-            <span class="visually-hidden">Close navigation menu</span></button>
-            <div class="mobile-overlay__body"></div>
-            <div class="menu-overlay-container">
-                <div class="menu-upper-part">
-                    <div class="menu-header">
-                        <div class="logo-burger-side">
-                            <button class="mobile-overlay__close-button menu-header__button button">
+            <div class="mobile-overlay__body">
+                <div class="menu-overlay-container">
+                    <div class="menu-upper-part">
+                        <div class="menu-header">
+                            <div class="logo-burger-side">
+                                <button class="mobile-overlay__close-button menu-header__button button">
+                                    <div class="button-figure"><img class="button__image"
+                                            src="assets/blocks/header/icons/cancel.svg" alt="" />
+                                    </div>
+                                    <span class="visually-hidden">Close navigation menu</span>
+                                </button>
+                                <a href="#" class="header__overlay-logo logo"><img
+                                        src="assets/blocks/header/icons/logo.svg" alt="CPS Logo" width="97"
+                                        height="51" /></a>
+                            </div>
+                            <button class="menu-header__button button">
                                 <div class="button-figure"><img class="button__image"
-                                        src="assets/blocks/header/icons/cancel.svg" alt="">
+                                        src="assets/blocks/header/icons/search.svg" alt="" />
                                 </div>
                             </button>
-                            <a href="#" class="header__logo logo"><img src="assets/blocks/header/icons/logo.svg"
-                                    alt="CPS Logo" width="97" height="51" /></a>
                         </div>
-                        <button class="menu-header__button button">
-                            <div class="button-figure"><img class="button__image"
-                                    src="assets/blocks/header/icons/search.svg" alt="">
-                            </div>
-                        </button>
+                        <div class="menu-list">
+                            <ul class="links-overlay-list">
+                                <li class="links-overlay-list__item"><a href="#"
+                                        class="links-overlay-list__link links-overlay-list__link--is-active">Ремонт
+                                        техники</a></li>
+                                <li class="links-overlay-list__item"><a href="#" class="links-overlay-list__link">Услуги
+                                        и сервисы</a></li>
+                                <li class="links-overlay-list__item"><a href="#"
+                                        class="links-overlay-list__link">Корпоративным клиентам</a>
+                                </li>
+                                <li class="links-overlay-list__item"><a href="#"
+                                        class="links-overlay-list__link">Продавцам техники</a></li>
+                                <li class="links-overlay-list__item"><a href="#"
+                                        class="links-overlay-list__link">Партнерам</a></li>
+                                <li class="links-overlay-list__item"><a href="#"
+                                        class="links-overlay-list__link">Производителям</a></li>
+                                <li class="links-overlay-list__item"><a href="#" class="links-overlay-list__link">Наши
+                                        сервисные центры</a>
+                                </li>
+                                <li class="links-overlay-list__item"><a href="#"
+                                        class="links-overlay-list__link">Контакты</a></li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="menu-list">
-                        <ul class="links-overlay-list">
-                            <li class="links-overlay-list__item"><a href="#"
-                                    class="links-overlay-list__link links-overlay-list__link--is-active">Ремонт
-                                    техники</a></li>
-                            <li class="links-overlay-list__item"><a href="#" class="links-overlay-list__link">Услуги и сервисы</a></li>
-                            <li class="links-overlay-list__item"><a href="#" class="links-overlay-list__link">Корпоративным клиентам</a>
-                            </li>
-                            <li class="links-overlay-list__item"><a href="#" class="links-overlay-list__link">Продавцам техники</a></li>
-                            <li class="links-overlay-list__item"><a href="#" class="links-overlay-list__link">Партнерам</a></li>
-                            <li class="links-overlay-list__item"><a href="#" class="links-overlay-list__link">Производителям</a></li>
-                            <li class="links-overlay-list__item"><a href="#" class="links-overlay-list__link">Наши сервисные центры</a>
-                            </li>
-                            <li class="links-overlay-list__item"><a href="#" class="links-overlay-list__link">Контакты</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="menu-overlay-footer">
-                    <div class="menu-overlay-footer-buttons">
-                        <button class="menu-header__button button">
-                            <div class="button-figure"><img class="button__image"
-                                    src="assets/blocks/header/icons/call.svg" alt="">
-                            </div>
-                        </button>
-                        <button class="menu-header__button button">
-                            <div class="button-figure"><img class="button__image"
-                                    src="assets/blocks/header/icons/chat.svg" alt="">
-                            </div>
-                        </button>
-                        <button class="menu-header__button button">
-                            <div class="button-figure"><img class="button__image"
-                                    src="assets/blocks/header/icons/profile.svg" alt=""></div>
-                        </button>
-                    </div>
-                    <div class="menu-overlay-footer-contacts">
-                        <p class="menu-overlay-container__email">mail@cps.com</p>
-                        <p class="menu-overlay-container__phone">8 800 890 8900</p>
-                    </div>
-                    <div class="menu-overlay-footer-languages">
-                        <ul class="languages-list">
-                            <li class="languages-list__item languages-list__item--is-active"><a href=""
-                                    class="languages-list__link languages-list__link--is-active">RU</a></li>
-                            <li class="languages-list__item"><a href="" class="languages-list__link">EN</a></li>
-                            <li class="languages-list__item"><a href="" class="languages-list__link">CH</a></li>
-                        </ul>
+                    <div class="menu-overlay-footer">
+                        <div class="menu-overlay-footer-buttons">
+                            <button class="menu-header__button button">
+                                <div class="button-figure"><img class="button__image"
+                                        src="assets/blocks/header/icons/call.svg" alt="" />
+                                </div>
+                            </button>
+                            <button class="menu-header__button button">
+                                <div class="button-figure"><img class="button__image"
+                                        src="assets/blocks/header/icons/chat.svg" alt="" />
+                                </div>
+                            </button>
+                            <button class="menu-header__button button">
+                                <div class="button-figure"><img class="button__image"
+                                        src="assets/blocks/header/icons/profile.svg" alt="" /></div>
+                            </button>
+                        </div>
+                        <div class="menu-overlay-footer-contacts">
+                            <p class="menu-overlay-container__email">mail@cps.com</p>
+                            <p class="menu-overlay-container__phone">8 800 890 8900</p>
+                        </div>
+                        <div class="menu-overlay-footer-languages">
+                            <ul class="languages-list">
+                                <li class="languages-list__item languages-list__item--is-active"><a href=""
+                                        class="languages-list__link languages-list__link--is-active">RU</a></li>
+                                <li class="languages-list__item"><a href="" class="languages-list__link">EN</a></li>
+                                <li class="languages-list__item"><a href="" class="languages-list__link">CH</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </form>
     </dialog>
-  </body>
+</body>
 
 </html>
