Price list section surrounding added

--- a/src/main.html
+++ b/src/main.html
@@ -368,35 +368,20 @@
                     class="service-list-show-all-button-element" src="assets/blocks/swiper/icons/continue.svg"
                     alt=""><span class="service-list-show-all-button-text">Показать все</span></button> </a>
 
-            <!-- Slider main container -->
+
             <div class="price-list">
                 <div class="price-list__header">
                     <h2 class="swiper-header__text">Цены на услуги</h2>
                 </div>
-                <!-- Additional required wrapper -->
-                <ul class="price-list__swiper-wrapper">
-                    <!-- Slides -->
-                    <li class="price-slide">
-                        <div class="price-slide-wrapper">
-                            <div class="price-slide__title">
-                                <p class="price-slide__category">Ремонтные услуги</p>
-                                <p class="price-slide__name">Тестирование с выдачей технического заключения</p>
-                            </div>
-                            <div class="price-slide__price">
-                                <p class="price-slide__category">Цена</p>
-                                <p class="price-slide__price-number">Бесплатно</p>
-                            </div>
-                            <div class="price-slide__time">
-                                <div class="price-slide__category">Срок</div>
-                                <div class="price-slide__time-number">30-120 мин</div>
-                            </div>
-                            <div class="price-slide__button button">
-                                <div class="price-slide__button-text">Заказать</div>
-                                <div class="price-slide__button-figure">
-                                    <img src="assets/blocks/price-list/icons/arrow.svg" alt="">
-                                </div>
 
-                            </div>
+                <ul class="price-list__swiper-wrapper">
+
+                    <li class="price-slide price-slide--desktop-table-header">
+                        <div class="price-slide-wrapper">
+                            <p class="price-list__table-header">Ремонтные услуги</p>
+                            <p class="price-list__table-header">Цена</p>
+                            <p class="price-list__table-header">Срок
+                            <div class="button-space"></div>
                         </div>
                     </li>
                     <li class="price-slide">
@@ -413,13 +398,13 @@
                                 <div class="price-slide__category">Срок</div>
                                 <div class="price-slide__time-number">30-120 мин</div>
                             </div>
-                            <div class="price-slide__button button">
+                            <button class="price-slide__button button">
                                 <div class="price-slide__button-text">Заказать</div>
                                 <div class="price-slide__button-figure">
                                     <img src="assets/blocks/price-list/icons/arrow.svg" alt="">
                                 </div>
 
-                            </div>
+                            </button>
                         </div>
                     </li>
                     <li class="price-slide">
@@ -436,21 +421,102 @@
                                 <div class="price-slide__category">Срок</div>
                                 <div class="price-slide__time-number">30-120 мин</div>
                             </div>
-                            <div class="price-slide__button button">
+                            <button class="price-slide__button button">
                                 <div class="price-slide__button-text">Заказать</div>
                                 <div class="price-slide__button-figure">
                                     <img src="assets/blocks/price-list/icons/arrow.svg" alt="">
                                 </div>
 
-                            </div>
+                            </button>
                         </div>
                     </li>
+                    <li class="price-slide">
+                        <div class="price-slide-wrapper">
+                            <div class="price-slide__title">
+                                <p class="price-slide__category">Ремонтные услуги</p>
+                                <p class="price-slide__name">Тестирование с выдачей технического заключения</p>
+                            </div>
+                            <div class="price-slide__price">
+                                <p class="price-slide__category">Цена</p>
+                                <p class="price-slide__price-number">Бесплатно</p>
+                            </div>
+                            <div class="price-slide__time">
+                                <div class="price-slide__category">Срок</div>
+                                <div class="price-slide__time-number">30-120 мин</div>
+                            </div>
+                            <button class="price-slide__button button">
+                                <div class="price-slide__button-text">Заказать</div>
+                                <div class="price-slide__button-figure">
+                                    <img src="assets/blocks/price-list/icons/arrow.svg" alt="">
+                                </div>
+
+                            </button>
+                        </div>
+                    </li>
+                    <li class="price-slide">
+                        <div class="price-slide-wrapper">
+                            <div class="price-slide__title">
+                                <p class="price-slide__category">Ремонтные услуги</p>
+                                <p class="price-slide__name">Замена полифонического динамика</p>
+                            </div>
+                            <div class="price-slide__price">
+                                <p class="price-slide__category">Цена</p>
+                                <p class="price-slide__price-number">1 000 ₽</p>
+                            </div>
+                            <div class="price-slide__time">
+                                <div class="price-slide__category">Срок</div>
+                                <div class="price-slide__time-number">30-120 мин</div>
+                            </div>
+                            <button class="price-slide__button button">
+                                <div class="price-slide__button-text">Заказать</div>
+                                <div class="price-slide__button-figure">
+                                    <img src="assets/blocks/price-list/icons/arrow.svg" alt="">
+                                </div>
+
+                            </button>
+                        </div>
+                    </li>
+                    <li class="price-slide">
+                        <div class="price-slide-wrapper">
+                            <div class="price-slide__title">
+                                <p class="price-slide__category">Ремонтные услуги</p>
+                                <p class="price-slide__name">Тестирование с выдачей технического заключения</p>
+                            </div>
+                            <div class="price-slide__price">
+                                <p class="price-slide__category">Цена</p>
+                                <p class="price-slide__price-number">Бесплатно</p>
+                            </div>
+                            <div class="price-slide__time">
+                                <div class="price-slide__category">Срок</div>
+                                <div class="price-slide__time-number">30-120 мин</div>
+                            </div>
+                            <button class="price-slide__button button">
+                                <div class="price-slide__button-text">Заказать</div>
+                                <div class="price-slide__button-figure">
+                                    <img src="assets/blocks/price-list/icons/arrow.svg" alt="">
+                                </div>
+
+                            </button>
+                        </div>
+                    </li>
+                </ul>
+                <div class="price-list__pagination"></div>
+                <p class="price-list__info">Все цены указаны с учетом НДС. Стоимость ремонта указана на единичную
+                    услугу. Для получения коммерческого предложения на постоянное обслуживание, оставьте заявку.</p>
+                <a href="#" class="price-list__contact">
+                    <p class="contact-text">Получить коммерческое предложение</p> 
+                    <img src="assets/blocks/price-list/icons/Line.svg" alt="">
+                </a>
             </div>
-            <!-- If we need pagination -->
-            <div class="price-list__pagination"></div>
+
+
+
+
+
     </div>
+
     </main>
-    </div>
+
 
     <dialog class="mobile-overlay" id="mobileOverlay">
         <div class="mobile-overlay__body">
