--- a/src/main.html
+++ b/src/main.html
@@ -509,13 +509,18 @@
                 </a>
             </div>
 
+        </main>
 
-
-
+<footer class="footer">
+    <p class="footer__text">© 2019 CPS<br>
+        Разработано командой Apesong </p>
+    <a href="#" class="footer__link footer__text">Политика конфиденциальности</a>
+    <p class="footer__text">Информация, размещенная на данной странице, не является публичной офертой</p>
+</footer>
 
     </div>
 
-    </main>
+
 
 
     <dialog class="mobile-overlay" id="mobileOverlay">
