Scroll behaviour is changed

--- a/src/main.html
+++ b/src/main.html
@@ -89,7 +89,7 @@
                 </div>
             </div>
         </div>
-        <div class="menu__backdrop">
+        <div class="menu__backdrop" id="close-menu-button">
         </div>
     </aside>
     <div class="landing-page">
